--- a/index.html
+++ b/index.html
@@ -19,6 +19,52 @@
        <P>Esto es un texto largo....</P>
        <br>
        <img width="500" src="https://assetsio.gnwcdn.com/clash-royale-codes.jpg?width=1600&height=900&fit=crop&quality=100&format=png&enable=upscale&auto=webp" alt="CLASH ROYALE">
-       <img src="img/hq720.jpg" width="500" alt="skibidi">  
+       <img src="img/hq720.jpg" width="500" alt="skibidi">
+       <br>
+       <a href="https://www.uniboyaca.edu.co">Uniboyaca</a>  
+       <br>
+       <a href="https://www.uniboyaca.edu.co" target="_blank"><img src="img/hq720.jpg" width="500" alt="skibidi"></a>
+       <!-- Esto es un comentario -->
+       <ul>
+          <li>Opcion 1</li>
+          <li>Opcion 2</li>
+          <li>Opcion 3</li>
+          <li>Opcion 4</li>
+       </ul> 
+       <ol>
+        <li>Opcion 1</li>
+        <li>Opcion 2</li>
+        <li>Opcion 3</li>
+        <li>Opcion 4</li>
+       </ol>
+       <table border="1"> 
+        <tr>
+            <td>Celda11</td>
+            <td>Celda12</td>
+            <td>Celda13</td>
+        </tr>
+        <tr>
+            <td>Celda21</td>
+            <td>Celda22</td>
+            <td>Celda23</td>
+        </tr>
+        <tr>
+            <td>Celda31</td>
+            <td>Celda32</td>
+            <td>Celda33</td>
+        </tr>
+
+       </table>
+       <br>
+       <table border="1">
+        <thead>
+            <tr>
+                <th>Columna 1</th>
+                <th>Columna 2</th>
+                <th>Columna 3</th>
+            </tr>
+        </thead>
+        
+       </table>
     </body>
 </html>
