--- a/forms.html
+++ b/forms.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <title>Formularios</title>
-    </head>  
+     </head>  
      <body>
         <h1>Formularios</h1>
         <form action="#"method="get">
@@ -65,6 +65,34 @@
                 <br>
                 <input type="submit" value="Aceptar">
                 <button type="submit">Aceptar</button>
+
              </form> 
-         </body>
+             <div>
+                esto es un div....
+             </div>
+             <main>
+                esto es un main.....
+             </main>
+             <section>
+                esto es un section.....
+             </section>
+             <article>
+                esto es un article.....
+             </article>
+             <nav>
+                esto es un nav....
+             </nav>
+             <fieldset>
+                <legend>Controles</legend>
+                <p>Esto es un control...</p>
+             </fieldset>
+             <footer>
+                esto es un pie de pagina....
+             </footer>
+             <header>
+                esto es un header....
+             </header>
+             
+
+     </body>
 </html>
